# eglue

./: Cargo.toml  ReadMe.md  exec.c  index.rs  lib.rs  rust--toolchain.toml  wrangler.toml
.github/workflows/: main.yml
bear/: index.js  package.json  wrangler.toml
jfmast/: mod.rs  modmutantbob.rs
jfmast.rs/: mod.rs
notes/: lib.rs
