[package]
edition = "2021"
name = "eglue"
version = "0.1.0"    # obey semver
authors = ["Nick Carducci <nmcarducci@gmail.com>"]
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[dependencies]
cc = "1.0"
worker = "0.0.9"

[lib]
path = "index.rs"
crate-type = ["cdylib", "rlib"]
name = "build"
