[package]
edition = "2021"
name = "eglue"
version = "0.1.0"    # obey semver
authors = ["Nick Carducci <nmcarducci@gmail.com>"]
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
[dependencies]
# workers-rs = "0.0.10"
# worker-build = "0.0.4"
cc = "1.0"
worker = "0.0.9"
# cfg-if = "1.0.0"

[lib]
path = "index.rs"
crate-type = ["cdylib", "rlib"]
name = "build"
